fix the overflow scroll bar at max-screen: 400px

--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@
   .main-bg {
     background-color: #5e2c1a;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     z-index: 1;
     position: absolute;
     top: 0;
@@ -97,11 +97,12 @@
   .main-bg {
     background-color: #5e2c1a;
     height: 100vh;
-    width: 100vw;
+    width: 99vw;
     z-index: 1;
     position: absolute;
     top: 0;
     left: 0;
+    overflow-x: hidden;
   }
 
 }
