--- a/src/pages/dashboard.css
+++ b/src/pages/dashboard.css
@@ -40,7 +40,7 @@
   /* background-color: rgb(230, 51, 51); */
   height: calc(100% - 200px - 53px);
   width: calc(100% - 450px);
-  overflow: scroll;
+  overflow-y: scroll;
   overflow-x: hidden;
   scroll-behavior: smooth;
   margin-top: 1.3%;
@@ -289,6 +289,21 @@
   }
 }
 
+
+@media screen and (max-width: 990px){
+  .coffee-card {
+    margin-left: 10px;
+    max-height: 145px;
+    margin-top: 10px;
+    max-width: 25%;
+    padding: 1rem;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.05);
+  }
+
+}
+
 @media screen and (max-width: 960px){
   .contest_board {
     width: calc(100% - 320px);
@@ -338,6 +353,7 @@
     height: 30%;
     margin-left: 3%;
   }
+  
 
   .create_clicko {
     margin-right: 5em;
@@ -346,7 +362,7 @@
   .add_contest {
     margin-top: 110%;
     width: 75%;
-    margin-right: 0%;
+    margin-right: calc((100% - 90%) / 2);
   }
 
   .clicko_name {
@@ -358,7 +374,7 @@
   .add_contest {
     margin-top: 123%;
     width: 75%;
-    margin-right: 0%;
+    margin-right: calc((100% - 92%) / 2);
   }
 
   .create_clicko {
@@ -371,7 +387,7 @@
   .add_contest {
     margin-top: 133%;
     width: 75%;
-    margin-right: 0%;
+    margin-right: calc((100% - 95%) / 2);
   }
 } 
 
@@ -384,7 +400,7 @@
   .add_contest {
     margin-top: 150%;
     width: 70%;
-    margin-right: 0%;
+    margin-right: calc((100% - 90%) / 2);
   }
 
   .create_clicko {
@@ -400,13 +416,14 @@
 @media screen and (max-width: 590px) {
   .add_contest {
     margin-top: 165%;
+    margin-right: calc((100% - 95%) / 2);
   }
 }
 
 @media screen and (max-width: 530px) {
   .add_contest {
     margin-top: 185%;
-    margin-right: -10px;
+    margin-right: calc((100% - 99%) / 2);
   }
   
 }
@@ -442,14 +459,22 @@
   .add_contest {
     margin-top: 225%;
     width: 65%;
-    margin-right: -11px;
+    margin-right: 0px;
+  }
+  .light-loader {
+    top: 60%;
   }
 }
 
 @media screen and (max-width: 400px) {
   .contest_board {
-    margin-left: -5%;
+    /* margin-left: -5%; */
     height: 25%;
+    overflow-x: hidden;
+  }
+
+  .contest_board::-webkit-scrollbar {
+    display: none;
   }
   .dashboard_bg {
     /* background-color: rgb(233, 58, 58); */
@@ -462,11 +487,11 @@
   .add_contest {
     margin-top: 200%;
     width: 80%;
-    margin-right: 0.5em;
+    margin-right: 1em;
   }
 }
 
-@media screen and (max-width: 370px) {
+@media screen and (max-width: 390px) {
   .coffee-card {
     max-width: 75%;
   }
@@ -475,7 +500,7 @@
   }
 }
 
-@media screen and (max-width: 340px) {
+@media screen and (max-width: 350px) {
   .coffee-card {
     margin-left: 0.5em;
   }
@@ -484,8 +509,7 @@
   }
 
   .add_contest {
-    margin-top: 240%;
-    margin-right: 0em;
+    margin-top: 245%;
   }
 
   .clicko_name {
@@ -493,16 +517,15 @@
   }
 }
 
-@media screen and (max-width: 302px) {
+@media screen and (max-width: 320px) {
   .add_contest {
-    margin-top: 270%;
-    margin-right: 0em;
+    margin-top: 263%;
+    margin-right: calc((100% - 97%) / 2);
   }
 }
 
-@media screen and (max-width: 270px) {
+@media screen and (max-width: 293px) {
   .add_contest {
     margin-top: 300%;
-    margin-right: 0em;
   }
 }
